--- a/sections/footer.liquid
+++ b/sections/footer.liquid
@@ -17,7 +17,7 @@
           <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/pages/features">Features</a></li>
-            <li><a href="/pages/products">All Products</a></li>
+            <li><a href="/pages/products">Products</a></li>
             <li><a href="/#pricing">Pricing</a></li>
           </ul>
         </div>
